# roadmap-estudos

./: .coverage  .gitignore  .harness.hash  .skill.md  AGENTS.md  CHANGELOG.md  GUIA_RAPIDO_SEAL.md  README.md  app.js  flowchart_layout.css  flowchart_layout.js  flowchart_layout.js.backup  generate_lessons.py  generate_roadmap.py  harness.py  index.html  main.py  orchestrator.py  pyproject.toml  roadmap_data.js  server.py  style.css  task_board.json  test_debug.html  test_expansion_layout.html  test_flowchart.html  test_tree.html
.tests_backup/: test_endpoints.py  test_generate_lessons.py  test_generate_roadmap.py
backend/: __init__.py  main.py
data/: dep_map.json  python_fundamentos.json  python_fundamentos_v2.json  roadmap_analise_de_dados.json  roadmap_automacao_de_tarefas_com_python.json  roadmap_devops.json  roadmap_exemplo_arvore.json  roadmap_programacao_orientada_a_objetos_em_python.json  test_save.json
docs/: ARVORE_EXPANSIVEL.md  Análise de Problemas de Lógica no Projeto Roadmap-Estudos  GUIA_LAYOUT_FLUXOGRAMA.md  Guia de Melhorias Estratégicas para o Projeto Roadmap-Estudos  IMPLEMENTACAO_AVALIACAO.md  LAYOUT_FLUXOGRAMA.md  PADRAO_JSON_ROADMAP.md  PADROES_FORMATO_CONTEUDO.md  POST_MORTEM.md  SISTEMA_AVALIACAO.md  Sugestões de Melhoria para o Projeto Roadmap-Estudos.md  architecture.md  c4-components.md  c4-containers.md  c4-context.md  conversa_antigravity.md  diagnostico-roadmaps-licoes.md  erd-complete.md  spec-impact-matrix.md
licoes/: abstracao.md  algos-ds.md  arch.md  assincrona.md  atributos_metodos.md  classes_objetos.md  conceitos_poo.md  (+17 more)
(+64 files in other folders)
